# Document-Q-A

./: .gitignore  DECISIONS.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: documents.py
backend/app/db/: client.py  document_store.py  vector_store.py
backend/app/models/: schemas.py
backend/app/services/: chunking_service.py  embedding_service.py  pdf_service.py  query_service.py
backend/supabase/: schema.sql
backend/tests/: test_chunking_service.py  test_documents_api.py  test_empbedding_service.py  test_pdf_Service.py  test_query_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatWindow.tsx  MessageBubble.tsx  Sidebar.tsx  UploadButton.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts
frontend/src/services/: api.ts
frontend/src/tests/: ChatWindow.test.tsx  Sidebar.test.tsx  UploadButton.test.tsx  api.test.ts  setup.ts
frontend/src/tests/mocks/: handlers.ts
frontend/src/types/: index.ts
frontend/src/utils/: sanitize.ts
